# Intent

./: .gitignore  CMakeLists.txt  IntentType.cpp  IntentType.h  README.md  main.cpp
execute/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  IntentTest.cpp
